--- a/VignobleWEB/appsettings.json
+++ b/VignobleWEB/appsettings.json
@@ -26,8 +26,8 @@
             }
         ]
     },
-    "ConnectionStrings": {
-        "SqlServerContextExample": "Server=localhost\\SQLEXPRESS;Database=LOGISTIQUE;Trusted_Connection=True;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    "UrlAPIConnection": "http://82.165.237.163:5000/api/"
+  },
     "AllowedHosts": "*"
 }
