feat: Add Extensions for Services and Configurations

--- a/VignobleWEB/appsettings.Development.json
+++ b/VignobleWEB/appsettings.Development.json
@@ -4,6 +4,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+  "Api": {
+    "BaseUrl": "http://82.165.237.163:5000/api/"
     }
   }
 }
