--- a/VignobleWEB/VignobleWEB.csproj
+++ b/VignobleWEB/VignobleWEB.csproj
@@ -12,6 +12,7 @@
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 	<PackageReference Include="Serilog" Version="2.12.0" />
 	<PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
 	<PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
