--- a/VignobleWEB/appsettings.json
+++ b/VignobleWEB/appsettings.json
@@ -33,7 +33,8 @@
     "APIPassword": "Password1"
   },
   "Api": {
-    "BaseUrl": "https://localhost:7231/api/"
+    //"BaseUrl": "https://localhost:7231/api/"
+    "BaseUrl": "http://82.165.237.163:5000/api"
   },
 
   "AllowedHosts": "*"
