--- a/VignobleWEB/appsettings.json
+++ b/VignobleWEB/appsettings.json
@@ -34,7 +34,7 @@
   },
   "Api": {
     //"BaseUrl": "https://localhost:7231/api/"
-    "BaseUrl": "http://82.165.237.163:5000/api"
+    "BaseUrl": "http://82.165.237.163:5005/api/"
   },
 
   "AllowedHosts": "*"
